# OWN_OAUTH_INDENTITY_PROVIDER_BACKEND

./: .gitignore  Dockerfile  FASTAPI-documenation.txt  alembic.ini  help.py  private.pem  public.pem  pyproject.toml  requirements.txt  test_fail.txt  test_final_verification.txt  test_imports.py  test_output.txt  test_saas_apps.py
alembic/: env.py
alembic/versions/: 0462ac208c05_add_tanent_link.py  053abe8911e8_added_fields_to_oauthclient.py  0ac8eff97183_add_payment_tables.py  16a05823eb25_add_new_colomn_in_oauth_client.py  2908eb885084_init.py  2c61c6a6c4a3_initial_migration.py  3528ecdac2f8_initial_migration.py  3a80bb9ebb40_add_plan_version.py  3b2e99300901_update.py  4bc344c0f508_change_name_in_oauth_cleint.py  5b642498da6d_init.py  5fcdd362f845_initial_migration.py  617a29dc14bd_update.py  619d576f9043_verify_models.py  8bdbff8bd9d5_update_permission_model_for_multiple_.py  8d53b34bb8fb_add_payment_tables.py  8e530b2649ef_added_fields_to_oauthclient.py  90a0e4697547_add_new_key_in_oauthclient.py  90fa1c503036_add_uuid_in_plan_and_scubscription.py  915054b2048c_update.py  96966cc63da5_add_description_role.py  9f01b238c80e_update.py  a63a5dc2f7f6_added_fields_to_oauthclient.py  bce36e0ce019_fix_model_registration.py  c9f9d55536f8_init.py  d0d9c31fcc8d_added_registraion_model.py  d77cac94ef2e_added_fields_to_oauthclient.py  d77e6bb66322_update.py  dace5005ee49_add_scope_to_permission_model.py  df7d15fc8fde_fix_model_registration.py  (+6 more)
app/: config.py  main.py
tests/: help.py  test_plan_versioning.py  test_saas_apps.py  test_trial_plan.py  test_webhook_handler.py
(+57 files in other folders)
